native/include/c_api/rp3d_c_api.h

// ==================== Opaque Type Declarations ====================
// These represent C++ objects but are exposed as opaque pointers to C/FFI

typedef struct RP3D_PhysicsCommon RP3D_PhysicsCommon;
typedef struct RP3D_PhysicsWorld RP3D_PhysicsWorld;
typedef struct RP3D_RigidBody RP3D_RigidBody;
typedef struct RP3D_Collider RP3D_Collider;
typedef struct RP3D_BoxShape RP3D_BoxShape;
typedef struct RP3D_SphereShape RP3D_SphereShape;
typedef struct RP3D_CapsuleShape RP3D_CapsuleShape;
typedef struct RP3D_HeightFieldShape RP3D_HeightFieldShape;
typedef struct RP3D_HeightField RP3D_HeightField;
// ==================== Enums ====================

typedef enum {
    RP3D_BODY_TYPE_STATIC = 1,
    RP3D_BODY_TYPE_KINEMATIC = 2,
    RP3D_BODY_TYPE_DYNAMIC = 3
} RP3D_BodyType;
// ==================== Value Types (POD Structs) ====================

typedef struct {
    float x;
    float y;
    float z;
} RP3D_Vector3;
typedef struct {
    float x;
    float y;
    float z;
    float w;
} RP3D_Quaternion;
typedef struct {
    RP3D_Vector3 position;
    RP3D_Quaternion orientation;
} RP3D_Transform;
typedef struct {
    RP3D_Vector3 point1;
    RP3D_Vector3 point2;
    float maxFraction;
} RP3D_Ray;
typedef struct {
    RP3D_RigidBody* body;
    RP3D_Collider* collider;
    RP3D_Vector3 worldPoint;
    RP3D_Vector3 worldNormal;
    float hitFraction;
} RP3D_RaycastInfo;
// ==================== PhysicsCommon (Factory) ====================

EMSCRIPTEN_KEEPALIVE RP3D_PhysicsCommon* rp3d_physics_common_create(void);
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy(RP3D_PhysicsCommon* common);
EMSCRIPTEN_KEEPALIVE RP3D_PhysicsWorld* rp3d_physics_common_create_physics_world(RP3D_PhysicsCommon* common);
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy_physics_world(RP3D_PhysicsCommon* common, RP3D_PhysicsWorld* world);
// Shape creation through PhysicsCommon
EMSCRIPTEN_KEEPALIVE RP3D_BoxShape* rp3d_physics_common_create_box_shape(RP3D_PhysicsCommon* common, const RP3D_Vector3* halfExtents);
EMSCRIPTEN_KEEPALIVE RP3D_SphereShape* rp3d_physics_common_create_sphere_shape(RP3D_PhysicsCommon* common, float radius);
EMSCRIPTEN_KEEPALIVE RP3D_CapsuleShape* rp3d_physics_common_create_capsule_shape(RP3D_PhysicsCommon* common, float radius, float height);
// HeightField creation/destruction
EMSCRIPTEN_KEEPALIVE RP3D_HeightField* rp3d_physics_common_create_height_field(
    RP3D_PhysicsCommon* common,
    uint32_t nbRows,
    uint32_t nbColumns,
    const float* heights,
    float minHeight,
    float maxHeight
);
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy_height_field(RP3D_PhysicsCommon* common, RP3D_HeightField* heightField);
// HeightFieldShape creation/destruction
EMSCRIPTEN_KEEPALIVE RP3D_HeightFieldShape* rp3d_physics_common_create_height_field_shape(RP3D_PhysicsCommon* common, RP3D_HeightField* heightField);
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy_height_field_shape(RP3D_PhysicsCommon* common, RP3D_HeightFieldShape* heightFieldShape);
// Mesh/shape destruction
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy_box_shape(RP3D_PhysicsCommon* common, RP3D_BoxShape* shape);
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy_sphere_shape(RP3D_PhysicsCommon* common, RP3D_SphereShape* shape);
EMSCRIPTEN_KEEPALIVE void rp3d_physics_common_destroy_capsule_shape(RP3D_PhysicsCommon* common, RP3D_CapsuleShape* shape);
// ==================== PhysicsWorld ====================

EMSCRIPTEN_KEEPALIVE void rp3d_world_update(RP3D_PhysicsWorld* world, float timeStep);
EMSCRIPTEN_KEEPALIVE void rp3d_world_set_gravity(RP3D_PhysicsWorld* world, const RP3D_Vector3* gravity);
EMSCRIPTEN_KEEPALIVE void rp3d_world_get_gravity(const RP3D_PhysicsWorld* world, RP3D_Vector3* outGravity);
EMSCRIPTEN_KEEPALIVE uint8_t rp3d_world_get_is_sleeping_enabled(const RP3D_PhysicsWorld* world);
EMSCRIPTEN_KEEPALIVE void rp3d_world_set_is_sleeping_enabled(RP3D_PhysicsWorld* world, uint8_t isSleepingEnabled);
// Gravity and sleep control
EMSCRIPTEN_KEEPALIVE void rp3d_world_set_is_gravity_enabled(RP3D_PhysicsWorld* world, uint8_t isGravityEnabled);
EMSCRIPTEN_KEEPALIVE void rp3d_world_set_sleep_linear_velocity(RP3D_PhysicsWorld* world, float sleepLinearVelocity);
EMSCRIPTEN_KEEPALIVE void rp3d_world_set_sleep_angular_velocity(RP3D_PhysicsWorld* world, float sleepAngularVelocity);
EMSCRIPTEN_KEEPALIVE void rp3d_world_set_time_before_sleep(RP3D_PhysicsWorld* world, float timeBeforeSleep);
EMSCRIPTEN_KEEPALIVE uint32_t rp3d_world_get_nb_rigid_bodies(const RP3D_PhysicsWorld* world);
EMSCRIPTEN_KEEPALIVE RP3D_RigidBody* rp3d_world_get_rigid_body(RP3D_PhysicsWorld* world, uint32_t index);
// Body creation/destruction
EMSCRIPTEN_KEEPALIVE RP3D_RigidBody* rp3d_world_create_rigid_body(RP3D_PhysicsWorld* world, const RP3D_Transform* transform);
EMSCRIPTEN_KEEPALIVE void rp3d_world_destroy_rigid_body(RP3D_PhysicsWorld* world, RP3D_RigidBody* body);
// Raycasting
EMSCRIPTEN_KEEPALIVE uint8_t rp3d_world_raycast(const RP3D_PhysicsWorld* world, const RP3D_Ray* ray, RP3D_RaycastInfo* raycastInfo);
// ==================== RigidBody ====================

EMSCRIPTEN_KEEPALIVE void rp3d_body_get_transform(const RP3D_RigidBody* body, RP3D_Transform* outTransform);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_transform(RP3D_RigidBody* body, float posX, float posY, float posZ, float quatX, float quatY, float quatZ, float quatW);
EMSCRIPTEN_KEEPALIVE void rp3d_body_get_position(const RP3D_RigidBody* body, RP3D_Vector3* outPosition);
EMSCRIPTEN_KEEPALIVE void rp3d_body_get_orientation(const RP3D_RigidBody* body, RP3D_Quaternion* outOrientation);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_type(RP3D_RigidBody* body, RP3D_BodyType type);
EMSCRIPTEN_KEEPALIVE RP3D_BodyType rp3d_body_get_type(const RP3D_RigidBody* body);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_mass(RP3D_RigidBody* body, float mass);
EMSCRIPTEN_KEEPALIVE float rp3d_body_get_mass(const RP3D_RigidBody* body);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_linear_velocity(RP3D_RigidBody* body, const RP3D_Vector3* linearVelocity);
EMSCRIPTEN_KEEPALIVE void rp3d_body_get_linear_velocity(const RP3D_RigidBody* body, RP3D_Vector3* outLinearVelocity);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_angular_velocity(RP3D_RigidBody* body, const RP3D_Vector3* angularVelocity);
EMSCRIPTEN_KEEPALIVE void rp3d_body_get_angular_velocity(const RP3D_RigidBody* body, RP3D_Vector3* outAngularVelocity);
EMSCRIPTEN_KEEPALIVE void rp3d_body_apply_force(RP3D_RigidBody* body, const RP3D_Vector3* force);
EMSCRIPTEN_KEEPALIVE void rp3d_body_apply_force_at_position(RP3D_RigidBody* body, const RP3D_Vector3* force, const RP3D_Vector3* position);
EMSCRIPTEN_KEEPALIVE void rp3d_body_apply_torque(RP3D_RigidBody* body, const RP3D_Vector3* torque);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_is_active(RP3D_RigidBody* body, uint8_t isActive);
EMSCRIPTEN_KEEPALIVE uint8_t rp3d_body_get_is_active(const RP3D_RigidBody* body);
EMSCRIPTEN_KEEPALIVE void rp3d_body_set_is_sleeping_allowed(RP3D_RigidBody* body, uint8_t isAllowed);
EMSCRIPTEN_KEEPALIVE uint8_t rp3d_body_get_is_sleeping_allowed(const RP3D_RigidBody* body);
// Gravity control
EMSCRIPTEN_KEEPALIVE void rp3d_body_enable_gravity(RP3D_RigidBody* body, uint8_t enableGravity);