lib/src/bindings/src/rp3d_ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:reactphysics3d_dart/reactphysics3d_dart.dart')
library;

import 'dart:ffi' as ffi;

/// ==================== PhysicsCommon (Factory) ====================
@ffi.Native<ffi.Pointer<RP3D_PhysicsCommon> Function()>(isLeaf: true)
external ffi.Pointer<RP3D_PhysicsCommon> rp3d_physics_common_create();

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>)>(isLeaf: true)
external void rp3d_physics_common_destroy(
  ffi.Pointer<RP3D_PhysicsCommon> common,
);

@ffi.Native<
    ffi.Pointer<RP3D_PhysicsWorld> Function(
        ffi.Pointer<RP3D_PhysicsCommon>)>(isLeaf: true)
external ffi.Pointer<RP3D_PhysicsWorld>
    rp3d_physics_common_create_physics_world(
  ffi.Pointer<RP3D_PhysicsCommon> common,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_PhysicsWorld>)>(isLeaf: true)
external void rp3d_physics_common_destroy_physics_world(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_PhysicsWorld> world,
);

/// Shape creation through PhysicsCommon
@ffi.Native<
    ffi.Pointer<RP3D_BoxShape> Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external ffi.Pointer<RP3D_BoxShape> rp3d_physics_common_create_box_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_Vector3> halfExtents,
);

@ffi.Native<
    ffi.Pointer<RP3D_SphereShape> Function(
        ffi.Pointer<RP3D_PhysicsCommon>, ffi.Float)>(isLeaf: true)
external ffi.Pointer<RP3D_SphereShape> rp3d_physics_common_create_sphere_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  double radius,
);

@ffi.Native<
    ffi.Pointer<RP3D_CapsuleShape> Function(
        ffi.Pointer<RP3D_PhysicsCommon>, ffi.Float, ffi.Float)>(isLeaf: true)
external ffi.Pointer<RP3D_CapsuleShape>
    rp3d_physics_common_create_capsule_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  double radius,
  double height,
);

/// HeightField creation/destruction
@ffi.Native<
    ffi.Pointer<RP3D_HeightField> Function(
        ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Uint32,
        ffi.Uint32,
        ffi.Pointer<ffi.Float>,
        ffi.Float,
        ffi.Float)>(isLeaf: true)
external ffi.Pointer<RP3D_HeightField> rp3d_physics_common_create_height_field(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  int nbRows,
  int nbColumns,
  ffi.Pointer<ffi.Float> heights,
  double minHeight,
  double maxHeight,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_HeightField>)>(isLeaf: true)
external void rp3d_physics_common_destroy_height_field(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_HeightField> heightField,
);

/// HeightFieldShape creation/destruction
@ffi.Native<
    ffi.Pointer<RP3D_HeightFieldShape> Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_HeightField>)>(isLeaf: true)
external ffi.Pointer<RP3D_HeightFieldShape>
    rp3d_physics_common_create_height_field_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_HeightField> heightField,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_HeightFieldShape>)>(isLeaf: true)
external void rp3d_physics_common_destroy_height_field_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_HeightFieldShape> heightFieldShape,
);

/// Mesh/shape destruction
@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_BoxShape>)>(isLeaf: true)
external void rp3d_physics_common_destroy_box_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_BoxShape> shape,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_SphereShape>)>(isLeaf: true)
external void rp3d_physics_common_destroy_sphere_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_SphereShape> shape,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsCommon>,
        ffi.Pointer<RP3D_CapsuleShape>)>(isLeaf: true)
external void rp3d_physics_common_destroy_capsule_shape(
  ffi.Pointer<RP3D_PhysicsCommon> common,
  ffi.Pointer<RP3D_CapsuleShape> shape,
);

/// ==================== PhysicsWorld ====================
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Float)>(
    isLeaf: true)
external void rp3d_world_update(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  double timeStep,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_world_set_gravity(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_Vector3> gravity,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_world_get_gravity(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_Vector3> outGravity,
);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<RP3D_PhysicsWorld>)>(isLeaf: true)
external int rp3d_world_get_is_sleeping_enabled(
  ffi.Pointer<RP3D_PhysicsWorld> world,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Uint8)>(
    isLeaf: true)
external void rp3d_world_set_is_sleeping_enabled(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  int isSleepingEnabled,
);

/// Gravity and sleep control
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Uint8)>(
    isLeaf: true)
external void rp3d_world_set_is_gravity_enabled(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  int isGravityEnabled,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Float)>(
    isLeaf: true)
external void rp3d_world_set_sleep_linear_velocity(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  double sleepLinearVelocity,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Float)>(
    isLeaf: true)
external void rp3d_world_set_sleep_angular_velocity(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  double sleepAngularVelocity,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Float)>(
    isLeaf: true)
external void rp3d_world_set_time_before_sleep(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  double timeBeforeSleep,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<RP3D_PhysicsWorld>)>(isLeaf: true)
external int rp3d_world_get_nb_rigid_bodies(
  ffi.Pointer<RP3D_PhysicsWorld> world,
);

@ffi.Native<
    ffi.Pointer<RP3D_RigidBody> Function(
        ffi.Pointer<RP3D_PhysicsWorld>, ffi.Uint32)>(isLeaf: true)
external ffi.Pointer<RP3D_RigidBody> rp3d_world_get_rigid_body(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  int index,
);

/// Body creation/destruction
@ffi.Native<
    ffi.Pointer<RP3D_RigidBody> Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_Transform>)>(isLeaf: true)
external ffi.Pointer<RP3D_RigidBody> rp3d_world_create_rigid_body(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_Transform> transform,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external void rp3d_world_destroy_rigid_body(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_RigidBody> body,
);

/// Raycasting
@ffi.Native<
    ffi.Uint8 Function(ffi.Pointer<RP3D_PhysicsWorld>, ffi.Pointer<RP3D_Ray>,
        ffi.Pointer<RP3D_RaycastInfo>)>(isLeaf: true)
external int rp3d_world_raycast(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_Ray> ray,
  ffi.Pointer<RP3D_RaycastInfo> raycastInfo,
);

/// ==================== RigidBody ====================
@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Transform>)>(isLeaf: true)
external void rp3d_body_get_transform(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Transform> outTransform,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.Float, ffi.Float,
        ffi.Float, ffi.Float, ffi.Float, ffi.Float, ffi.Float)>(isLeaf: true)
external void rp3d_body_set_transform(
  ffi.Pointer<RP3D_RigidBody> body,
  double posX,
  double posY,
  double posZ,
  double quatX,
  double quatY,
  double quatZ,
  double quatW,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_get_position(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> outPosition,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_RigidBody>,
        ffi.Pointer<RP3D_Quaternion>)>(isLeaf: true)
external void rp3d_body_get_orientation(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Quaternion> outOrientation,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.UnsignedInt)>(
    isLeaf: true)
external void rp3d_body_set_type(
  ffi.Pointer<RP3D_RigidBody> body,
  int type,
);

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external int rp3d_body_get_type(
  ffi.Pointer<RP3D_RigidBody> body,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.Float)>(
    isLeaf: true)
external void rp3d_body_set_mass(
  ffi.Pointer<RP3D_RigidBody> body,
  double mass,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external double rp3d_body_get_mass(
  ffi.Pointer<RP3D_RigidBody> body,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_set_linear_velocity(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> linearVelocity,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_get_linear_velocity(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> outLinearVelocity,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_set_angular_velocity(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> angularVelocity,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_get_angular_velocity(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> outAngularVelocity,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_apply_force(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> force,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>,
        ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_apply_force_at_position(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> force,
  ffi.Pointer<RP3D_Vector3> position,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_body_apply_torque(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Vector3> torque,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.Uint8)>(
    isLeaf: true)
external void rp3d_body_set_is_active(
  ffi.Pointer<RP3D_RigidBody> body,
  int isActive,
);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external int rp3d_body_get_is_active(
  ffi.Pointer<RP3D_RigidBody> body,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.Uint8)>(
    isLeaf: true)
external void rp3d_body_set_is_sleeping_allowed(
  ffi.Pointer<RP3D_RigidBody> body,
  int isAllowed,
);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external int rp3d_body_get_is_sleeping_allowed(
  ffi.Pointer<RP3D_RigidBody> body,
);

/// Gravity control
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_RigidBody>, ffi.Uint8)>(
    isLeaf: true)
external void rp3d_body_enable_gravity(
  ffi.Pointer<RP3D_RigidBody> body,
  int enableGravity,
);
